// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse function should collapse a tree such as specified in RFC002 example 1`] = `
TBlock {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": "This is ",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": "textual",
          "data": "phrasing content",
          "displayName": "TText",
          "elementModel": HTMLElementModel {
            "contentModel": "textual",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": false,
            "isTranslatable": true,
            "isVoid": false,
            "mixedUAStyles": undefined,
            "tagName": "span",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": null,
      "displayName": "TPhrasing",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {
        "src": "https://domain.com/logo.jpg",
      },
      "children": Array [],
      "className": null,
      "contentModel": "block",
      "displayName": "TBlock",
      "elementModel": HTMLElementModel {
        "contentModel": "block",
        "getUADerivedStyleFromAttributes": undefined,
        "isOpaque": true,
        "isTranslatable": true,
        "isVoid": true,
        "mixedUAStyles": undefined,
        "tagName": "img",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "img",
      "type": "block",
    },
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": "and this is ",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": "textual",
          "data": "too",
          "displayName": "TText",
          "elementModel": HTMLElementModel {
            "contentModel": "textual",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": false,
            "isTranslatable": true,
            "isVoid": false,
            "mixedUAStyles": Object {
              "fontWeight": "bold",
            },
            "tagName": "strong",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": ".",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": null,
      "displayName": "TPhrasing",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "className": null,
  "contentModel": "mixed",
  "displayName": "TBlock",
  "elementModel": HTMLElementModel {
    "contentModel": "mixed",
    "getUADerivedStyleFromAttributes": [Function],
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "a",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "block",
}
`;

exports[`collapse function should handle deeply nested HTML 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": "First implicit paragraph.",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": null,
      "displayName": "TPhrasing",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "contentModel": null,
              "data": "Second implicit paragraph",
              "displayName": "TText",
              "elementModel": null,
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "className": null,
          "contentModel": null,
          "displayName": "TPhrasing",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {},
          "children": Array [
            TPhrasing {
              "attributes": Object {},
              "children": Array [
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "className": null,
                  "contentModel": null,
                  "data": "A new paragraph.",
                  "displayName": "TText",
                  "elementModel": null,
                  "hasWhiteSpaceCollapsingEnabled": true,
                  "id": null,
                  "parentStyles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": null,
                  "type": "text",
                },
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "className": null,
                  "contentModel": "textual",
                  "data": " And a span within",
                  "displayName": "TText",
                  "elementModel": HTMLElementModel {
                    "contentModel": "textual",
                    "getUADerivedStyleFromAttributes": undefined,
                    "isOpaque": false,
                    "isTranslatable": true,
                    "isVoid": false,
                    "mixedUAStyles": undefined,
                    "tagName": "span",
                  },
                  "hasWhiteSpaceCollapsingEnabled": true,
                  "id": null,
                  "parentStyles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": "span",
                  "type": "text",
                },
              ],
              "className": null,
              "contentModel": null,
              "displayName": "TPhrasing",
              "elementModel": null,
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "phrasing",
            },
            TBlock {
              "attributes": Object {
                "src": "https://domain.com/logo.jpg",
              },
              "children": Array [],
              "className": null,
              "contentModel": "block",
              "displayName": "TBlock",
              "elementModel": HTMLElementModel {
                "contentModel": "block",
                "getUADerivedStyleFromAttributes": undefined,
                "isOpaque": true,
                "isTranslatable": true,
                "isVoid": true,
                "mixedUAStyles": undefined,
                "tagName": "img",
              },
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "img",
              "type": "block",
            },
          ],
          "className": null,
          "contentModel": "block",
          "displayName": "TBlock",
          "elementModel": HTMLElementModel {
            "contentModel": "block",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": false,
            "isTranslatable": true,
            "isVoid": false,
            "mixedUAStyles": Object {
              "marginBottom": "1em",
              "marginTop": "1em",
            },
            "tagName": "p",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "p",
          "type": "block",
        },
      ],
      "className": null,
      "contentModel": "block",
      "displayName": "TBlock",
      "elementModel": HTMLElementModel {
        "contentModel": "block",
        "getUADerivedStyleFromAttributes": undefined,
        "isOpaque": false,
        "isTranslatable": true,
        "isVoid": false,
        "mixedUAStyles": undefined,
        "tagName": "div",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "className": null,
  "contentModel": "block",
  "displayName": "TBlock",
  "elementModel": HTMLElementModel {
    "contentModel": "block",
    "getUADerivedStyleFromAttributes": undefined,
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "article",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "article",
  "type": "block",
}
`;

exports[`collapse function should handle direct style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": "textual",
          "data": "This is nice!",
          "displayName": "TText",
          "elementModel": HTMLElementModel {
            "contentModel": "textual",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": false,
            "isTranslatable": true,
            "isVoid": false,
            "mixedUAStyles": undefined,
            "tagName": "span",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {
              "borderBottomWidth": 20,
              "borderLeftWidth": 20,
              "borderRightWidth": 20,
              "borderTopWidth": 20,
            },
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {
              "color": "red",
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": null,
      "displayName": "TPhrasing",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "className": null,
  "contentModel": "block",
  "displayName": "TBlock",
  "elementModel": HTMLElementModel {
    "contentModel": "block",
    "getUADerivedStyleFromAttributes": undefined,
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "div",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {
      "borderBottomWidth": 20,
      "borderLeftWidth": 20,
      "borderRightWidth": 20,
      "borderTopWidth": 20,
    },
    "nativeTextFlow": Object {
      "fontSize": 18,
    },
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle indirect style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "contentModel": null,
              "data": "This is great!",
              "displayName": "TText",
              "elementModel": null,
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {
                  "borderBottomWidth": 20,
                  "borderLeftWidth": 20,
                  "borderRightWidth": 20,
                  "borderTopWidth": 20,
                },
                "nativeTextFlow": Object {
                  "fontSize": 18,
                },
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {
                  "fontSize": 18,
                },
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "className": null,
          "contentModel": null,
          "displayName": "TPhrasing",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {
              "borderBottomWidth": 20,
              "borderLeftWidth": 20,
              "borderRightWidth": 20,
              "borderTopWidth": 20,
            },
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
      ],
      "className": null,
      "contentModel": "block",
      "displayName": "TBlock",
      "elementModel": HTMLElementModel {
        "contentModel": "block",
        "getUADerivedStyleFromAttributes": undefined,
        "isOpaque": false,
        "isTranslatable": true,
        "isVoid": false,
        "mixedUAStyles": undefined,
        "tagName": "div",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "className": null,
  "contentModel": "block",
  "displayName": "TBlock",
  "elementModel": HTMLElementModel {
    "contentModel": "block",
    "getUADerivedStyleFromAttributes": undefined,
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "div",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {
      "fontSize": 18,
    },
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle nested anchors 1`] = `
TPhrasing {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "contentModel": null,
      "data": "This is ",
      "displayName": "TText",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "contentModel": "textual",
      "data": "phrasing content",
      "displayName": "TText",
      "elementModel": HTMLElementModel {
        "contentModel": "textual",
        "getUADerivedStyleFromAttributes": undefined,
        "isOpaque": false,
        "isTranslatable": true,
        "isVoid": false,
        "mixedUAStyles": undefined,
        "tagName": "span",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "span",
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "contentModel": null,
      "data": " ",
      "displayName": "TText",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TPhrasing {
      "attributes": Object {
        "href": "https://sub.domain.com",
      },
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": "and this is ",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": "textual",
          "data": "too",
          "displayName": "TText",
          "elementModel": HTMLElementModel {
            "contentModel": "textual",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": false,
            "isTranslatable": true,
            "isVoid": false,
            "mixedUAStyles": Object {
              "fontWeight": "bold",
            },
            "tagName": "strong",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": "mixed",
      "displayName": "TPhrasing",
      "elementModel": HTMLElementModel {
        "contentModel": "mixed",
        "getUADerivedStyleFromAttributes": [Function],
        "isOpaque": false,
        "isTranslatable": true,
        "isVoid": false,
        "mixedUAStyles": undefined,
        "tagName": "a",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "a",
      "type": "phrasing",
    },
  ],
  "className": null,
  "contentModel": "mixed",
  "displayName": "TPhrasing",
  "elementModel": HTMLElementModel {
    "contentModel": "mixed",
    "getUADerivedStyleFromAttributes": [Function],
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "a",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "phrasing",
}
`;

exports[`collapse function should hoist blocks recursively 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "contentModel": null,
          "data": "Line1",
          "displayName": "TText",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "contentModel": null,
      "displayName": "TPhrasing",
      "elementModel": null,
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "contentModel": null,
              "data": "Line2",
              "displayName": "TText",
              "elementModel": null,
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "contentModel": "textual",
              "data": " Line3",
              "displayName": "TText",
              "elementModel": HTMLElementModel {
                "contentModel": "textual",
                "getUADerivedStyleFromAttributes": undefined,
                "isOpaque": false,
                "isTranslatable": true,
                "isVoid": false,
                "mixedUAStyles": undefined,
                "tagName": "span",
              },
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "span",
              "type": "text",
            },
          ],
          "className": null,
          "contentModel": null,
          "displayName": "TPhrasing",
          "elementModel": null,
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {
            "src": "https://domain.com/logo.jpg",
          },
          "children": Array [],
          "className": null,
          "contentModel": "block",
          "displayName": "TBlock",
          "elementModel": HTMLElementModel {
            "contentModel": "block",
            "getUADerivedStyleFromAttributes": undefined,
            "isOpaque": true,
            "isTranslatable": true,
            "isVoid": true,
            "mixedUAStyles": undefined,
            "tagName": "img",
          },
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "img",
          "type": "block",
        },
      ],
      "className": null,
      "contentModel": "textual",
      "displayName": "TBlock",
      "elementModel": HTMLElementModel {
        "contentModel": "textual",
        "getUADerivedStyleFromAttributes": undefined,
        "isOpaque": false,
        "isTranslatable": true,
        "isVoid": false,
        "mixedUAStyles": Object {
          "fontWeight": "bold",
        },
        "tagName": "strong",
      },
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "strong",
      "type": "block",
    },
  ],
  "className": null,
  "contentModel": "textual",
  "displayName": "TBlock",
  "elementModel": HTMLElementModel {
    "contentModel": "textual",
    "getUADerivedStyleFromAttributes": undefined,
    "isOpaque": false,
    "isTranslatable": true,
    "isVoid": false,
    "mixedUAStyles": undefined,
    "tagName": "span",
  },
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "parentStyles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "span",
  "type": "block",
}
`;
